Use JAR distribution instead